# interactive

./: README.md  pyproject.toml
config/: api.py  settings.py  urls.py
cpq/: admin.py  api.py  apps.py  forms.py  material_api.py  models.py  schemas.py  urls.py  views.py
cpq/migrations/: 0001_initial.py  0002_alter_manufacturer_cnpj_alter_supplier_cnpj.py  0003_alter_manufacturer_cnpj_alter_supplier_cnpj.py  0004_alter_manufacturer_cnpj_alter_supplier_cnpj.py  0005_alter_manufacturer_cnpj_alter_manufacturer_name_and_more.py  0006_alter_material_material_code_alter_material_name_and_more.py  0007_material_price.py  0008_order_shippingaddress_orderitem.py  0009_alter_material_price.py  0010_alter_material_price.py  0011_alter_material_price.py  0012_alter_material_price.py  0013_alter_material_price_alter_orderitem_material.py  0014_machine.py  0015_alter_machine_name.py  0016_remove_machine_material_machine_material.py  0017_machine_price.py  0018_orderitem_machine.py
cpq/templates/cpq/: base.html  cart.html  checkout.html  home.html  machine_insert.html  machine_list.html  manufacture_insert.html  manufacture_list.html  manufacturer_insert.html  manufacturer_list.html  material_insert.html  material_list.html  messages.html  signin.html  signup.html  supplier_insert.html  supplier_list.html
cpq/utils/: formatters.py  validators.py
static/js/: api.js  cpq.js  manufacture.js  messages.js
